--- a/css/ranking.css
+++ b/css/ranking.css
@@ -21,6 +21,7 @@ h3
 {
     font-family: Permanent Marker;
     font-size: 50px;
+    font-weight: lighter;
     position: absolute;
     bottom: 77%;
     right: 33%;
