Enfrentamiento con el enemigo

--- a/css/game.css
+++ b/css/game.css
@@ -226,3 +226,14 @@ body
           transform: rotate(360deg);
       }
   }
+
+  .bg
+  {
+    position: fixed;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding:0;
+    opacity: 0;
+  }
