--- a/css/game.css
+++ b/css/game.css
@@ -37,6 +37,56 @@ body
   border-radius: 20px;
 }
 
+#Vida_barP1
+{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 4%;
+  right: 75%;
+  height: 35px;
+  width: 350px;
+  -webkit-appearance: none;
+  border-radius: 5px;
+}
+
+#Vida_barP1::-webkit-progress-bar
+{
+  background-color: aliceblue;
+  border-radius: 20px;
+}
+
+#Vida_barP1::-webkit-progress-value {
+  background-color: rgb(0, 187, 84);
+  border-radius: 20px;
+}
+
+
+#Vida_barP2
+{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 4%;
+  left: 75%;
+  height: 35px;
+  width: 350px;
+  -webkit-appearance: none;
+  border-radius: 5px;
+}
+
+#Vida_barP2::-webkit-progress-bar
+{
+  background-color: aliceblue;
+  border-radius: 20px;
+}
+
+#Vida_barP2::-webkit-progress-value {
+  background-color: rgb(0, 187, 84);
+  border-radius: 20px;
+}
+
+
 #Exp_bar
 {
   position: absolute;
@@ -59,6 +109,53 @@ body
   border-radius: 5px;
 }
 
+
+#Exp_barP1
+{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 8.5%;
+  right: 85%;
+  -webkit-appearance: none;
+  height: 10px;
+}
+
+#Exp_barP1::-webkit-progress-bar
+{
+  background-color: aliceblue;
+  border-radius: 5px;
+}
+
+#Exp_barP1::-webkit-progress-value {
+  background-color: rgb(0, 157, 255);
+  border-radius: 5px;
+}
+
+
+#Exp_barP2
+{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 8.5%;
+  left: 75.8%;
+  -webkit-appearance: none;
+  height: 10px;
+}
+
+#Exp_barP2::-webkit-progress-bar
+{
+  background-color: aliceblue;
+  border-radius: 5px;
+}
+
+#Exp_barP2::-webkit-progress-value {
+  background-color: rgb(0, 157, 255);
+  border-radius: 5px;
+}
+
+
 #Vida_value
 {
   position: absolute;
@@ -76,6 +173,52 @@ body
 }
 
 #Vida_value label
+{
+  position: absolute;
+  left: 11%;
+  top:20%;
+}
+
+#Vida_valueP1
+{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 1%;
+  right: 95%;
+  font-size: 25px;
+  font-family: Permanent Marker;
+  border: 7px solid rgb(0, 187, 84);
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  background-color: aliceblue;
+}
+
+#Vida_valueP1 label
+{
+  position: absolute;
+  left: 11%;
+  top:20%;
+}
+
+#Vida_valueP2
+{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 1%;
+  left: 71%;
+  font-size: 25px;
+  font-family: Permanent Marker;
+  border: 7px solid rgb(0, 187, 84);
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  background-color: aliceblue;
+}
+
+#Vida_valueP2 label
 {
   position: absolute;
   left: 11%;
