--- a/css/game.css
+++ b/css/game.css
@@ -438,3 +438,23 @@ body
 		{
 			background-color: #BCE6FF;
 		}
+
+    #ProgressLoad
+    {
+      position: absolute;
+      left: 25%;
+      top: 75%;
+      color:rgb(0, 157, 255);
+      width: 50%;
+      border: none;
+      border-radius: 20px;
+      overflow: hidden;
+    }
+
+    #ProgressLoad::-webkit-progress-bar {
+      background-color: #f1f1f1;
+  }
+  
+  #ProgressLoad::-webkit-progress-value {
+    background-color: #00A1FF;
+}
